--- a/Assets/scss/main.scss
+++ b/Assets/scss/main.scss
@@ -249,6 +249,12 @@ main {
 
 #contact {
 	@include flexBox(row, wrap, space-evenly, flex-start);
+	@supports (-ms-accelerator: true) {
+		/* Microsoft Edge */
+		#contact {
+			justify-content: space-around;
+		}
+	}
 	margin: 180px auto 0;
 	width: 90%;
 	border: 2px solid $basicWhiteColor;
