--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -20,7 +20,7 @@ nav.navbar {
 }
 nav.navbar #logo {
   font-family: "Audiowide", cursive;
-  font-size: 1.3em;
+  font-size: 1.2em;
   letter-spacing: 0.07rem;
 }
 nav.navbar #collapsibleNavbar {
@@ -39,11 +39,15 @@ nav.navbar .nav-item {
 nav.navbar .navbar-toggler {
   padding: 0.5rem 0.75rem;
 }
+nav.navbar .navbar-toggler-icon {
+  width: 1.4em;
+  height: 1.4em;
+}
 nav.navbar .my-link {
   color: white !important;
   font-weight: 600;
   letter-spacing: 0.1rem;
-  font-size: 1rem;
+  font-size: 0.9rem;
   display: block;
   width: 100%;
   height: 56px;
@@ -84,7 +88,7 @@ header .my-jumbotron {
   position: relative;
   top: 300px;
   opacity: 0;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   line-height: 1.8em;
   text-align: center;
   padding: 60px;
@@ -137,6 +141,7 @@ main {
   min-height: 100vh;
   width: 90%;
   margin: 0 auto;
+  font-size: 1.25rem;
 }
 .first-section .first-section-left {
   width: 35%;
@@ -164,9 +169,9 @@ main {
 .first-section .first-section-right h2 {
   color: #04c2c9;
   margin-bottom: 0.65em;
+  font-size: 1.8rem;
 }
 .first-section .first-section-right p {
-  font-size: 1.3em;
   line-height: 1.6em;
   text-align: justify;
   color: white;
@@ -184,16 +189,17 @@ main {
   align-items: center;
   font-weight: normal;
   background-color: black;
+  font-size: 1.25rem;
   letter-spacing: 0.1rem;
 }
 #projectIntro h2 {
   text-align: center;
   margin-bottom: 0.6em;
   color: #04c2c9;
+  font-size: 1.8rem;
 }
 #projectIntro p {
   width: 60%;
-  font-size: 1.3em;
   line-height: 1.6em;
   text-align: center;
   color: white;
@@ -278,13 +284,14 @@ main {
   width: 40%;
   min-height: 600px;
   padding: 10px;
+  font-size: 1.25rem;
 }
 #contact .contactForm .myContactTitle {
-  font-size: 2em;
+  font-size: 1.8rem;
 }
 #contact .contactForm .label {
   display: block;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
@@ -294,7 +301,6 @@ main {
   color: white;
   margin: 0;
   width: 100%;
-  font-size: 1.3em;
   padding: 10px;
   border: none;
 }
@@ -310,7 +316,7 @@ main {
   line-height: 36px;
   letter-spacing: 0.2rem;
   font-family: "Acme", sans-serif;
-  font-size: 1.15em;
+  font-size: 1em;
   font-weight: 600;
 }
 
@@ -472,7 +478,7 @@ main {
   background-color: white;
   color: #1b242f;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
   text-decoration: none;
 }
 #back2Top:hover {
@@ -503,7 +509,7 @@ main {
 /* Media queries section  */
 @media only screen and (max-width: 1600px) {
   header .my-jumbotron {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 1.7em;
     padding: 45px;
   }
@@ -521,7 +527,7 @@ main {
     margin-top: 100px;
   }
   .first-section .first-section-right {
-    width: 70%;
+    width: 50%;
     margin: 100px 0;
   }
 
@@ -544,10 +550,14 @@ main {
 }
 @media only screen and (max-width: 1200px) {
   nav.navbar #logo {
-    font-size: 1.2em;
+    font-size: 1.1em;
+  }
+  nav.navbar .navbar-toggler-icon {
+    width: 1.3em;
+    height: 1.3em;
   }
   nav.navbar .my-link {
-    font-size: 0.9rem;
+    font-size: 0.85rem;
   }
 
   header .my-jumbotron {
@@ -558,27 +568,29 @@ main {
     width: 60%;
   }
 
+  .first-section {
+    font-size: 1.2rem;
+  }
   .first-section .first-section-left {
     width: 70%;
     margin-top: 80px;
   }
   .first-section .first-section-right {
-    width: 80%;
+    width: 70%;
     margin: 80px 0;
   }
   .first-section .first-section-right h2 {
     font-size: 1.6rem;
   }
-  .first-section .first-section-right p {
-    font-size: 1.25em;
-  }
 
+  #projectIntro {
+    font-size: 1.2rem;
+  }
   #projectIntro h2 {
     font-size: 1.6rem;
   }
   #projectIntro p {
     width: 65%;
-    font-size: 1.25em;
     text-align: center;
   }
 
@@ -588,9 +600,10 @@ main {
 
   #contact .contactForm {
     width: 70%;
+    font-size: 1.2rem;
   }
   #contact .contactForm .myContactTitle {
-    font-size: 1.9em;
+    font-size: 1.6rem;
   }
   #contact .contactForm .my-submit-btn {
     width: 100%;
@@ -643,16 +656,10 @@ main {
     width: 80%;
     padding: 10px;
   }
-  #contact .contactForm .myContactTitle {
-    font-size: 1.8em;
-  }
-  #contact .contactForm .myData {
-    font-size: 1.15em;
-  }
   #contact .contactForm .my-submit-btn {
     height: 45px;
     line-height: 23px;
-    font-size: 1rem;
+    font-size: 0.95rem;
     padding: 10px 15px;
   }
 
@@ -672,13 +679,24 @@ main {
     font-size: 20px;
     line-height: 40px;
   }
+
+  #back2Top {
+    font-size: 20px;
+  }
 }
 @media only screen and (max-width: 600px) {
   nav.navbar #logo {
-    font-size: 1.1em;
+    font-size: 1em;
   }
   nav.navbar .navbar-toggler {
     font-size: 1rem;
+  }
+  nav.navbar .navbar-toggler-icon {
+    width: 1.2em;
+    height: 1.2em;
+  }
+  nav.navbar .my-link {
+    font-size: 0.8rem;
   }
 
   header {
@@ -687,7 +705,7 @@ main {
     background-repeat: no repeat;
   }
   header .my-jumbotron {
-    font-size: 1.15rem;
+    font-size: 1.1rem;
   }
   header .my-jumbotron .my-header-btn {
     height: 40px;
@@ -700,6 +718,7 @@ main {
 
   .first-section {
     width: 90%;
+    font-size: 1.1rem;
   }
   .first-section .first-section-left {
     width: 80%;
@@ -711,15 +730,16 @@ main {
     font-size: 1.4rem;
   }
   .first-section .first-section-right p {
-    font-size: 1.15em;
     letter-spacing: 0.05rem;
   }
 
+  #projectIntro {
+    font-size: 1.1rem;
+  }
   #projectIntro h2 {
     font-size: 1.4rem;
   }
   #projectIntro p {
-    font-size: 1.2em;
     letter-spacing: 0.05rem;
   }
 
@@ -738,9 +758,16 @@ main {
   #contact .contactForm {
     padding: 10px;
     width: 90%;
+    font-size: 1.1rem;
   }
-  #contact .contactForm .myData {
-    font-size: 1.1em;
+  #contact .contactForm .myContactTitle {
+    font-size: 1.4rem;
+  }
+  #contact .contactForm .label {
+    font-size: 1.15rem;
+  }
+  #contact .contactForm .my-submit-btn {
+    font-size: 0.9rem;
   }
 
   .my-footer {
@@ -752,7 +779,7 @@ main {
     min-height: 110vh;
   }
   header .my-jumbotron {
-    font-size: 1.05rem;
+    font-size: 1rem;
     letter-spacing: normal;
     padding: 15px 25px;
   }
@@ -773,7 +800,6 @@ main {
     padding: 10px;
   }
   #contact .contactForm .myData {
-    font-size: 1em;
     padding: 5px;
   }
 }
