--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -68,7 +68,7 @@ header {
 }
 header .myContainer {
   position: relative;
-  left: 300px;
+  right: 300px;
   width: 60%;
   overflow: hidden;
   opacity: 0;
@@ -284,7 +284,7 @@ main {
   width: 40%;
   min-height: 600px;
   padding: 10px;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
 }
 #contact .contactForm .myContactTitle {
   font-size: 1.8rem;
@@ -316,7 +316,7 @@ main {
   line-height: 36px;
   letter-spacing: 0.2rem;
   font-family: "Acme", sans-serif;
-  font-size: 1em;
+  font-size: 0.9em;
   font-weight: 600;
 }
 
@@ -600,7 +600,7 @@ main {
 
   #contact .contactForm {
     width: 70%;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
   #contact .contactForm .myContactTitle {
     font-size: 1.6rem;
@@ -758,7 +758,7 @@ main {
   #contact .contactForm {
     padding: 10px;
     width: 90%;
-    font-size: 1.1rem;
+    font-size: 1.05rem;
   }
   #contact .contactForm .myContactTitle {
     font-size: 1.4rem;
