--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -25,8 +25,8 @@ nav.navbar #logo {
 }
 nav.navbar #collapsibleNavbar {
   position: fixed;
-  top: 120px;
-  left: 16px;
+  top: 85px;
+  right: 16px;
   width: 140px;
   text-align: center;
   border: 2px solid white;
