--- a/Assets/scss/main.scss
+++ b/Assets/scss/main.scss
@@ -58,8 +58,8 @@ nav.navbar {
   }
   #collapsibleNavbar {
     position: fixed;
-    top: 120px;
-    left: 16px;
+    top: 85px;
+    right: 16px;
     width: 140px;
     text-align: center;
     border: 2px solid $basicWhiteColor;
